# imapsync-manager

./: .env.example  .gitignore  AGENTS.md  README.md  alert_manager.py  app.py  app_filtros_routes.py  auto_sync.py  config.py  db_manager.py  filter_manager.py  gmail_filters_import.py  imap_filter_integration.py  imap_sync_native.py  mailFilters.xml  pyproject.toml  requirements.txt  spam_analyzer.py  spam_analyzer_config.py  sync_cancel.py  sync_executor.py
.cursor/skills/git-commit-composer/: SKILL.md
blueprints/: AGENTS.md  __init__.py  accounts.py  admin.py  api.py  auth.py  dashboard.py  filters.py  spam.py  sync.py  utils.py
templates/: AGENTS.md  adicionar_conta_origem.html  adicionar_conta_principal.html  adicionar_filtro.html  adicionar_filtro_global.html  admin_spam_global.html  admin_spam_palavras_genericas.html  admin_usuarios.html  base.html  dashboard.html  detalhes_conta_principal.html  editar_conta_origem.html  editar_filtro.html  emails_sincronizados.html  emails_sincronizados_conta_principal.html  filtros.html  filtros_globais.html  importar_filtros_gmail.html  login.html  logs.html  mensagens_problematicas.html  minha_conta.html  register.html  spam_analyzer.html  spam_config_usuario.html
tests/: AGENTS.md  conftest.py  test_antispam.py  test_auth.py  test_health.py
