[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "imapsync-manager"
version = "1.0.0"
description = "Gerenciador web de sincronização IMAP"
requires-python = ">=3.10"

# ── Ruff (lint + formatação via check) ────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100
exclude = [
    ".venv", "venv", "__pycache__",
    "imap_filter_integration.py",   # arquivo de documentação
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # linha muito longa (gerenciado por line-length)
    "B006",  # mutable default argument (padrão em Flask)
    "B007",  # loop variable not used in loop body (falsos positivos)
]

# ── Black (formatação) ────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310", "py311"]
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | imap_filter_integration\.py
)/
'''

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
